--- a/css/index.css
+++ b/css/index.css
@@ -342,3 +342,280 @@ footer {
 li {
 	list-style-type: square;
 }
+
+/* Mobile */
+@media (max-width: 480px) {
+  h1 {
+    font-size: 60px;
+    /* text-align: center; */
+  }
+
+  body {
+    width: 100%;
+    margin: 0px auto;
+  }
+
+  nav {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .box-top {
+    display: flex;
+    flex-direction: column-reverse;
+    width: 100%;
+    margin-top: 25px;
+  }
+
+  .box-top img {
+    max-width: 200px;
+    display: flex;
+    margin-left: 130px;
+    margin-bottom: 10px;
+  }
+  
+  a {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 40px;
+    font-size: 18px;
+    color: gray;
+    text-decoration: none;
+    margin-left: -0px;
+    border: 1px solid gray;
+  }
+
+  /* Box for Slogan & Start button */
+  .box-content-one {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 50px;
+  }
+
+  /* Innovation on demand Box */
+  .box-one {
+    display: flex;
+    flex-direction: column;
+    margin-left: 75px;
+  }
+
+  /* Get Started Button */
+  .box-two {
+    display: flex;
+    flex-direction: column;
+    font-size: 20px;
+    color: gray;
+    text-align: center;
+    padding-top: 2px;
+    height: 35px;
+    margin-left: 75px;
+    border: 2px solid black;
+  }
+
+  /* Box Right with Image */
+  .box-content-two {
+    display: none;
+  }
+
+  .box-section-two {
+    display: flex;
+    flex-direction: column;
+    margin-top: 60px;
+  }
+
+  .box-content-three {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    margin: 0px 15px 40px 15px;
+  }
+  
+  .box-content-four {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    margin: 0px 15px 40px 15px;
+  }
+
+  .box-section-three {
+    display: flex;
+    flex-direction: column;
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
+
+  .box-content-five {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    margin: 30px 15px 40px 15px;
+  }
+  
+  .box-content-six {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    margin: 0px 15px 40px 15px;
+  }
+  
+  .box-content-seven {
+    display: flex;
+    flex-direction: column;
+    margin-top: 15px;
+    width: 90%;
+    margin: 0px 15px 40px 15px;
+  }
+
+  .section-four {
+    display: flex;
+    flex-direction: column;
+    margin-top: 35px;
+    margin-left: 15px;
+  }
+  
+  address {
+    margin-bottom: 25px;
+  }
+  
+  footer {
+    text-align: center;
+    margin: 50px 0px 20px 15px;
+  }
+}
+
+/* Tablet | Ipad */
+@media (min-width: 481px) and (max-width: 768px) {
+  body {
+    margin: 0px auto;
+  }
+
+  .content {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+
+  h1 {
+    font-size: 60px;
+    text-align: center;
+  }
+  
+  .box-top {
+    display: flex;
+    flex-direction: column-reverse;
+    margin-top: 25px;
+  }
+  
+  nav {
+    display: flex;
+    margin-top: 12px;
+  }
+  
+  .box-top img {
+    display: flex;
+    flex-direction: column;
+    max-width: 200px;
+    margin-left: 35%;
+    margin-bottom: 40px;
+  }
+  
+  a {
+    font-size: 18px;
+    color: gray;
+    text-decoration: none;
+    margin-right: 70px;
+    margin-left: 5px;
+  }
+
+  /* Box Right with Image */
+  .box-content-two {
+    display: none;
+  }
+
+  hr {
+    /* width: 75%; */
+    /* margin-left: -0px; */
+    border: 2px solid black;
+    max-width: 100%;
+  }
+
+  /* Box for Slogan & Start button */
+  .box-content-one {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 50px;
+    margin-left: 30%;
+  }
+  
+  /* Innovation on demand Box */
+  .box-one {
+    display: flex;
+    flex-direction: column;
+    margin-top: 30px;
+    /* margin-left: 220px; */
+  
+  }
+  /* Get Started Button */
+  .box-two {
+    display: flex;
+    flex-direction: column;
+    font-size: 20px;
+    color: gray;
+    padding-top: 2px;
+    height: 35px;
+    border: 2px solid black;
+  }
+
+  .box-content-three {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    margin: 0px 30px 30px 15px;
+  }
+  
+  .box-content-four {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    margin: 0px 25px 30px 15px;
+  }
+
+  .box-content-five {
+    display: flex;
+    flex-direction: column;
+    width: 95%;
+    margin: 30px 25px 50px 15px;
+  }
+  
+  .box-content-six {
+    display: flex;
+    flex-direction: column;
+    width: 95%;
+    margin: 30px 25px 50px 15px;
+  }
+  
+  .box-content-seven {
+    display: flex;
+    flex-direction: column;
+    margin-top: 15px;
+    width: 95%;
+    margin: 30px 15px 50px 15px;
+  }
+
+  .section-four {
+    display: flex;
+    flex-direction: column;
+    margin-top: 35px;
+    margin-left: 15px;
+  }
+  
+  address {
+    margin-bottom: 25px;
+  }
+  
+  footer {
+    text-align: center;
+    margin: 50px 0px 20px 15px;
+  }
+}
+
