--- a/css/index.css
+++ b/css/index.css
@@ -66,11 +66,11 @@ h1, h2, h3, h4, h5 {
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
 .content {
 	max-width: 960px;
-	margin: auto;
+  margin: auto;
 }
 
 h1 {
-	font-size: 80px;
+	font-size: 70px;
 	text-align: center;
 }
 
@@ -88,7 +88,7 @@ hr {
 }
 
 body {
-	margin: 0px 100px 0px 100px;
+	margin: 0px auto;
 }
 
 .box-top {
@@ -105,7 +105,7 @@ nav {
 .box-top img {
 	display: flex;
 	flex-direction: row-reverse;
-	margin-left: 40px;
+	margin-left: 35px;
 }
 
 a {
@@ -118,15 +118,17 @@ a {
 
 /* Box for top section */
 .box-section-one {
-	display: flex;
+  display: flex;
+  width: 100%;
+  margin: 40px 0px 40px 0px;
 }
 
 /* Box for Slogan & Start button */
 .box-content-one {
 	display: flex;
 	flex-direction: column;
-	margin-top: 15px;
-	margin-left: 25px;
+	margin-top: 50px;
+  margin-left: 10%;
 }
 
 /* Innovation on demand Box */
@@ -139,12 +141,17 @@ a {
 /* Get Started Button */
 .box-two {
 	display: flex;
-	flex-direction: column;
+  flex-direction: column-reverse;
+  justify-content: center;
 	font-size: 20px;
 	color: gray;
 	text-align: center;
-	padding-top: 2px;
-	border: 2px solid gray;
+  padding-top: 2px;
+  width: 220px;
+  height: 50px;
+  margin-left: 12%;
+  border: 2px solid gray;
+  border-radius: 5px;
 }
 
 /* Box Right with Image */
@@ -159,13 +166,13 @@ a {
 /* Section 2 */
 .box-section-two {
 	display: flex;
-	margin-top: 15px;
+	margin-top:40px;
 }
 
 .box-content-three {
 	display: flex;
 	flex-wrap: wrap;
-	width: 45%;
+  width: 45%;
 }
 
 .box-content-four {
@@ -189,7 +196,7 @@ a {
 .box-section-three {
 	display: flex;
 	margin-top: 15px;
-	margin-bottom: 15px;
+  margin-bottom: 15px;
 }
 
 .box-content-five {
@@ -225,7 +232,7 @@ a {
 	display: flex;
 	flex-wrap: wrap;
 	flex-direction: column;
-	margin-top: 25px;
+  margin-top: 25px;
 }
 
 address {
@@ -233,8 +240,9 @@ address {
 }
 
 footer {
-	text-align: center;
-	margin-right: 300px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 	margin-top: 50px;
 	margin-bottom: 10px;
 }
@@ -332,8 +340,6 @@ footer {
 	margin-left: 15px;
 	justify-content: center;
 	border-radius: 5px;
-	/* align-items: baseline; */
-	/* text-align: center; */
 }
 .learn-more p {
 	margin-top: 8px;
@@ -347,7 +353,6 @@ li {
 @media (max-width: 480px) {
   h1 {
     font-size: 60px;
-    /* text-align: center; */
   }
 
   body {
@@ -370,15 +375,18 @@ li {
   .box-top img {
     max-width: 200px;
     display: flex;
-    margin-left: 130px;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 10px;
   }
   
   a {
     display: flex;
     justify-content: center;
+    flex-direction: column-reverse;
+    align-items: center;
     width: 100%;
-    height: 40px;
+    height: 50px;
     font-size: 18px;
     color: gray;
     text-decoration: none;
@@ -386,32 +394,46 @@ li {
     border: 1px solid gray;
   }
 
+  .box-section-one {
+    margin-top: 0px;
+  }
+
   /* Box for Slogan & Start button */
   .box-content-one {
     display: flex;
     flex-direction: column;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   /* Innovation on demand Box */
   .box-one {
     display: flex;
     flex-direction: column;
-    margin-left: 75px;
+    align-items: center;
+
   }
 
   /* Get Started Button */
   .box-two {
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
+    justify-content: center;
     font-size: 20px;
     color: gray;
     text-align: center;
     padding-top: 2px;
-    height: 35px;
-    margin-left: 75px;
-    border: 2px solid black;
+    height: 50px;
+    margin-left: 5%;
+    border: 2px solid gray;
   }
+
+  /* Banner Image */
+  .header-image {
+    height: auto; 
+    max-width: 50%; 
+  }  
 
   /* Box Right with Image */
   .box-content-two {
@@ -436,6 +458,12 @@ li {
     flex-direction: column;
     width: 90%;
     margin: 0px 15px 40px 15px;
+  }
+
+  .box-banner-image .middle-img {
+    max-width: 95%;
+    max-height: auto;
+    margin: 0 10px 0 10px;
   }
 
   .box-section-three {
@@ -508,6 +536,7 @@ li {
   
   nav {
     display: flex;
+    justify-content: space-around;
     margin-top: 12px;
   }
   
@@ -520,11 +549,12 @@ li {
   }
   
   a {
+    display: flex;
     font-size: 18px;
     color: gray;
     text-decoration: none;
-    margin-right: 70px;
-    margin-left: 5px;
+    margin-right: 5%;
+    margin-left: 2%;
   }
 
   /* Box Right with Image */
@@ -533,8 +563,6 @@ li {
   }
 
   hr {
-    /* width: 75%; */
-    /* margin-left: -0px; */
     border: 2px solid gray;
     max-width: 100%;
   }
@@ -551,54 +579,53 @@ li {
   .box-one {
     display: flex;
     flex-direction: column;
-    margin-top: 30px;
-    /* margin-left: 220px; */
+    margin-top: 5px;
   
   }
   /* Get Started Button */
   .box-two {
     display: flex;
-    flex-direction: column;
     font-size: 20px;
     color: gray;
     padding-top: 2px;
-    height: 35px;
-    border: 2px solid black;
+    margin-left: 5%;
+    height: 50px;
+    border: 2px solid gray;
   }
 
   .box-content-three {
     display: flex;
     flex-direction: column;
     width: 90%;
-    margin: 0px 30px 30px 15px;
+    margin: 0px 20px 30px 15px;
   }
   
   .box-content-four {
     display: flex;
     flex-direction: column;
     width: 90%;
-    margin: 0px 25px 30px 15px;
+    margin: 0px 20px 30px 15px;
   }
 
   /* Banner Image */
-  .header-image {
-    max-width: 100%;
-    height: auto;
-    margin-top: 15px;
-}
+  .box-banner-image .middle-img {
+    max-width: 98%;
+    max-height: auto;
+    margin: 0 5px 0 5px;
+  }
 
   .box-content-five {
     display: flex;
     flex-direction: column;
     width: 95%;
-    margin: 30px 25px 50px 15px;
+    margin: 30px 20px 20px 15px;
   }
   
   .box-content-six {
     display: flex;
     flex-direction: column;
     width: 95%;
-    margin: 30px 25px 50px 15px;
+    margin: 30px 20px 20px 15px;
   }
   
   .box-content-seven {
@@ -606,7 +633,7 @@ li {
     flex-direction: column;
     margin-top: 15px;
     width: 95%;
-    margin: 30px 15px 50px 15px;
+    margin: 30px 15px 20px 15px;
   }
 
   .section-four {
